[package]
name = "tenorcli"
version = "0.9.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
colored = "3.0.0"
dotenv = "0.15.0"
rand = "0.9.1"
reqwest = { version = "0.12.19", features = [ "json" ] }
serde = { version = "1.0.219", features = [ "derive" ] }
tokio = { version = "1.45.1", features = [ "macros", "rt-multi-thread" ]}

[[bin]]
name = "tenorcli"
path = "main.rs"
